<resources>
    <string name="app_name">Vehicare</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="phone_or_email_address">Phone or email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="complete">Complete</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="vehicle_license_no">Vehicle License No.</string>
    <string name="vehicle_insurance_no">Vehicle Insurance No.</string>
    <string name="vehicle_identification_no">Vehicle Identification No.</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stats_charts"><![CDATA[Stats & Charts]]></string>
    <string name="driver_s_email">Driver\'s Email</string>
    <string name="driver_s_name">Driver\'s Name</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_license_number">Vehicle License Number</string>
    <string name="other_details">Other Details</string>
    <string name="title_activity_vehicle_register">VehicleRegisterActivity</string>
</resources>