<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SigninActivity">

    <ImageButton
        android:id="@+id/img_back_Signin"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="283dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_signin"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/img_signin_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vehicare_logo2"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText_phone_emailAddress"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/phone_or_email_address"
        android:textColor="#757575"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_signin_logo"
        tools:ignore="Autofill,LabelFor,TextFields,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_signin_Password"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone_emailAddress"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/textView_pasForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/forgot_your_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signin_Password" />

    <Button
        android:id="@+id/button_SignIn"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner_blue"
        android:fontFamily="@font/inter_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_pasForgot"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_QForgotPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="101dp"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textColor="#243443"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_SignIn" />

    <TextView
        android:id="@+id/textView_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="145dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up_here"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_QForgotPas" />


</androidx.constraintlayout.widget.ConstraintLayout>