<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageButton
        android:id="@+id/img_back_Signup"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="283dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_signin"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_signuphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="157dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up_here"
        android:textColor="#243443"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_back_Signup"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_signup_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_signuphere"
        app:srcCompat="@drawable/ic_vehicare_logo2"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText_signupName"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/name"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_signup_logo"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_signupPhoneEmail"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textPersonName|textAutoComplete|phone"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/phone_or_email_address"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signupName"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextDOB"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="date"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/date_of_birth"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signupPhoneEmail"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_signupPassword"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColorHint="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDOB"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_confPassword"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColorHint="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signupPassword"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/button_signupComplete"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner_blue"
        android:fontFamily="@font/inter_medium"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_confPassword"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>