<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VehicleRegActivity">

    <ImageButton
        android:id="@+id/img_back_vehReg"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="283dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_signin"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_vehReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="129dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/vehicle_registration"
        android:textColor="#243443"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_back_vehReg"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_vehreg_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_vehReg"
        app:srcCompat="@drawable/ic_vehicare_logo2"
        tools:ignore="ContentDescription" />

    <Spinner
        android:id="@+id/spinnerVehModel"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_bg"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_vehreg_logo"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber_vehLicenseNo"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/vehicle_license_no"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVehModel"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber_vehInsuNo"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/vehicle_insurance_no"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_vehLicenseNo"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber_vehIDNo"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/vehicle_identification_no"
        android:textColor="#243443"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_vehInsuNo"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <Button
        android:id="@+id/button_vehRegComplete"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner_blue"
        android:fontFamily="@font/inter_medium"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_vehIDNo"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>